# gdl-geode

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  about.md  mod.json  mod.json_old
.github/workflows/: build.yml  lite-ver-build.yml
_lite/: CMakeLists.txt  README.md  _main.cpp  mod.json
api/: PageManager.cpp  PageManager.hpp  api.cpp  api.hpp  stringPatch.cpp  stringPatch.hpp
resources/: gdl_patches-android.json  gdl_patches-windows.json  gdl_patches.json  ru_ru.json  windows_patches.json
resources/files/: GDL_TranslatedFrames-ru-hd.plist  GDL_TranslatedFrames-ru-uhd.plist  GDL_TranslatedFrames-ru.plist
resources/files/loc/: ru-lang.json
resources/fonts/: chatFont-hd.fnt
resources/loc/: ru-lang.json  ru_lang a.json  ru_lang testing.json  ru_lang.json
resources/patches/: android32-2.205.txt  win-2.204.json
resources/spritesheets/: GDL_TranslatedFrames-ru-hd.plist  GDL_TranslatedFrames-ru.plist  GDL_TranslatedFrames-uhd.plist
src/: BrownAlertDelegate.hpp  LanguageCell.cpp  LanguageCell.hpp  LanguageLayer.cpp  LanguageLayer.hpp  _updater.hpp  coloring.cpp  hooks.cpp  hooks.hpp  main.cpp  menu.cpp  menu.hpp  patches.cpp  patches.hpp  stringPatch.hpp  types.hpp  utils.cpp  utils.hpp
src_/: coloring.hpp  hooks.cpp  main.cpp  utils.cpp  utils.hpp
